--- a/css/select2.css
+++ b/css/select2.css
@@ -424,8 +424,6 @@ disabled look for disabled choices in the results dropdown
 /* multiselect */
 
 .select2-container-multi .select2-choices {
-    height: auto !important;
-    height: 1%;
     margin: 0;
     padding: 0;
     position: relative;
@@ -447,6 +445,8 @@ disabled look for disabled choices in the results dropdown
 
 .select2-container-multi .select2-choices {
     min-height: 26px;
+    max-height: 190px;
+    overflow-y: scroll;
 }
 
 .select2-container-multi.select2-container-active .select2-choices {
