--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ textarea {
 body {
     font-size: 1em;
     line-height: 1.4;
+    font-family: Verdana;
 }
 
 /*
@@ -98,12 +99,12 @@ textarea {
 .container {
     background-color: #ececec;
     border: 1px solid #2980b9;
-    border-right: 0px;
 }
 
 .filters {
     padding: 0px 0px 10px 0px;
-    border: 1px solid #2980b9;
+    border-left: 1px solid #2980b9;
+    height:auto;
 
 }
 
@@ -146,6 +147,12 @@ textarea {
 
 .select-multiple {
     width:100%;
+}
+
+#correlation {
+    text-align: center;
+    font-size: 16pt;
+    color: #2980b9;
 }
 
 #clear_all {
